--- a/templates/base.html
+++ b/templates/base.html
@@ -23,20 +23,18 @@
   <link rel="stylesheet" type="text/css" href={% static "/css/style.css" %}>
   <link rel="stylesheet" type="text/css" href={% static "./css/demo.css" %}>
   <style>
-    
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Syne:wght@500;600;700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@500;600;700;800;900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Cabin:wght@500;600;700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
-    
   </style>
 
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
 
 
 </head>
@@ -99,7 +97,7 @@
                           <span class="menu-item-text">Кейсы</span>
                         </a>
                       </li>
-                      
+
                     </ul>
                   </div>
                 </li>
@@ -312,7 +310,7 @@
                 <li class="nav-item ">
                   <a href="{% url 'webinars' %}" class="nav-link-item">Вебинары
                   </a>
-                  
+
                 </li>
               </ul>
             </nav>
@@ -349,136 +347,137 @@
 
 
     <div class="footer  footer-padding-default footer--dark-v1">
-        <div class="container">
-          <div class="row row--footer-main">
-            <div class="col-md-8 col-lg-5 col-xl-5 col-xxl-4">
-              <div class="footer__content-block">
-                <div class="footer__content-text">
-                  <div class="footer-brand">
-                    <img src="./image/logo-white.png" alt="image alt">
-                  </div>
-                  <p>
-                    We are strategic & creative digital agency who are focused on user experience, mobile, social, data gathering and promotional offerings.
-                  </p>
+      <div class="container">
+        <div class="row row--footer-main">
+          <div class="col-md-8 col-lg-5 col-xl-5 col-xxl-4">
+            <div class="footer__content-block">
+              <div class="footer__content-text">
+                <div class="footer-brand">
+                  <img src="./image/logo-white.png" alt="image alt">
                 </div>
-                <a href="#" class="footer-link">mascoexample@gmail.com</a>
-                <br>
-                <ul class="list-social">
+                <p>
+                  We are strategic & creative digital agency who are focused on user experience, mobile, social, data
+                  gathering and promotional offerings.
+                </p>
+              </div>
+              <a href="#" class="footer-link">mascoexample@gmail.com</a>
+              <br>
+              <ul class="list-social">
+                <li>
+                  <a href="#">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class=" col-lg-7 col-xl-6 col-xxl-7 offset-xl-1">
+            <div class="row row--list-block">
+              <div class="col-auto col-md-4 col-lg-auto col-xl-auto col-xxl-auto">
+                <h3 class="footer-title">Primary Pages</h3>
+                <ul class="footer-list">
                   <li>
-                    <a href="#">
-                      <i class="fa-brands fa-facebook-f"></i>
-                    </a>
+                    <a href="#">Demos</a>
                   </li>
                   <li>
-                    <a href="#">
-                      <i class="fa-brands fa-twitter"></i>
-                    </a>
+                    <a href="#">About Us</a>
                   </li>
                   <li>
-                    <a href="#">
-                      <i class="fa-brands fa-instagram"></i>
-                    </a>
+                    <a href="#">Services</a>
                   </li>
                   <li>
-                    <a href="#">
-                      <i class="fa-brands fa-github"></i>
-                    </a>
+                    <a href="#">Pages</a>
+                  </li>
+                  <li>
+                    <a href="#">Contact</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-auto col-md-4 col-lg-auto col-xl-auto col-xxl-auto">
+                <h3 class="footer-title">Utility pages</h3>
+                <ul class="footer-list">
+                  <li>
+                    <a href="#">Instructions</a>
+                  </li>
+                  <li>
+                    <a href="#"> Style guide</a>
+                  </li>
+                  <li>
+                    <a href="#"> Licenses</a>
+                  </li>
+                  <li>
+                    <a href="#"> 404 Not found</a>
+                  </li>
+                  <li>
+                    <a href="#"> Password protected</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-auto col-md-4 col-lg-auto col-xl-auto col-xxl-auto">
+                <h3 class="footer-title">Resources</h3>
+                <ul class="footer-list">
+                  <li>
+                    <a href="#">Support</a>
+                  </li>
+                  <li>
+                    <a href="#"> Privacy policy</a>
+                  </li>
+                  <li>
+                    <a href="#"> Terms & Conditions</a>
+                  </li>
+                  <li>
+                    <a href="#"> Strategic finance</a>
+                  </li>
+                  <li>
+                    <a href="#"> Video guide</a>
                   </li>
                 </ul>
               </div>
             </div>
-            <div class=" col-lg-7 col-xl-6 col-xxl-7 offset-xl-1">
-              <div class="row row--list-block">
-                <div class="col-auto col-md-4 col-lg-auto col-xl-auto col-xxl-auto">
-                  <h3 class="footer-title">Primary Pages</h3>
-                  <ul class="footer-list">
-                    <li>
-                      <a href="#">Demos</a>
-                    </li>
-                    <li>
-                      <a href="#">About Us</a>
-                    </li>
-                    <li>
-                      <a href="#">Services</a>
-                    </li>
-                    <li>
-                      <a href="#">Pages</a>
-                    </li>
-                    <li>
-                      <a href="#">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-auto col-md-4 col-lg-auto col-xl-auto col-xxl-auto">
-                  <h3 class="footer-title">Utility pages</h3>
-                  <ul class="footer-list">
-                    <li>
-                      <a href="#">Instructions</a>
-                    </li>
-                    <li>
-                      <a href="#"> Style guide</a>
-                    </li>
-                    <li>
-                      <a href="#"> Licenses</a>
-                    </li>
-                    <li>
-                      <a href="#"> 404 Not found</a>
-                    </li>
-                    <li>
-                      <a href="#"> Password protected</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-auto col-md-4 col-lg-auto col-xl-auto col-xxl-auto">
-                  <h3 class="footer-title">Resources</h3>
-                  <ul class="footer-list">
-                    <li>
-                      <a href="#">Support</a>
-                    </li>
-                    <li>
-                      <a href="#"> Privacy policy</a>
-                    </li>
-                    <li>
-                      <a href="#"> Terms & Conditions</a>
-                    </li>
-                    <li>
-                      <a href="#"> Strategic finance</a>
-                    </li>
-                    <li>
-                      <a href="#"> Video guide</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
-        <div class="copyright-block">
-          <div class="container">
-            <div class="copyright-inner text-center  copyright-border">
-              <p>© Copyright 2023, All Rights Reserved by Mthemeus</p>
-            </div>
+      </div>
+      <div class="copyright-block">
+        <div class="container">
+          <div class="copyright-inner text-center  copyright-border">
+            <p>© Copyright 2023, All Rights Reserved by Mthemeus</p>
           </div>
         </div>
       </div>
     </div>
-    <!-- Vendor Scripts -->
-    <script src={% static "/plugins/jquery/jquery.min.js" %}></script>
-    <script src={% static "/plugins/jquery/jquery-migrate.min.js" %}></script>
-    <script src={% static "/plugins/bootstrap/dist/js/bootstrap.bundle.min.js" %}></script>
-    <!-- Plugin's Scripts -->
-    <script src={% static "/plugins/inlineSvg/inlineSvg.min.js" %}></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src={% static "plugins/fancybox/jquery.fancybox.min.js" %}></script>
-    <script src={% static "plugins/aos/aos.min.js" %}></script>
-    <script src={% static "./plugins/isotope/isotope.pkgd.min.js" %}></script>
-    <script src={% static "./plugins/isotope/packery.pkgd.min.js" %}></script>
-    <script src={% static "./plugins/isotope/image.loaded.js" %}></script>
-    <script src={% static "plugins/slick/slick.min.js" %}></script>
-    <script src={% static "./plugins/countdown/jquery.countdown.js" %} defer></script>
-    <script src={% static "js/menu.js" %}></script>
-    <script src={% static "js/custom.js" %}></script>
-    <!-- Activation Script -->
-  </body>
-  
-  </html>
+  </div>
+  <!-- Vendor Scripts -->
+  <script src={% static "/plugins/jquery/jquery.min.js" %}></script>
+  <script src={% static "/plugins/jquery/jquery-migrate.min.js" %}></script>
+  <script src={% static "/plugins/bootstrap/dist/js/bootstrap.bundle.min.js" %}></script>
+  <!-- Plugin's Scripts -->
+  <script src={% static "/plugins/inlineSvg/inlineSvg.min.js" %}></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src={% static "plugins/fancybox/jquery.fancybox.min.js" %}></script>
+  <script src={% static "plugins/aos/aos.min.js" %}></script>
+  <script src={% static "./plugins/isotope/isotope.pkgd.min.js" %}></script>
+  <script src={% static "./plugins/isotope/packery.pkgd.min.js" %}></script>
+  <script src={% static "./plugins/isotope/image.loaded.js" %}></script>
+  <script src={% static "plugins/slick/slick.min.js" %}></script>
+  <script src={% static "./plugins/countdown/jquery.countdown.js" %} defer></script>
+  <script src={% static "js/menu.js" %}></script>
+  <script src={% static "js/custom.js" %}></script>
+  <!-- Activation Script -->
+</body>
+
+</html>
