--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,9 +1,8 @@
-
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
 <div class="inner_banner-section">
-  <img class="inner_banner-background-image" src= {% static '/image/common/inner-bg.png' %} alt="image alt">
+  <img class="inner_banner-background-image" src={% static '/image/common/inner-bg.png' %} alt="image alt">
   <div class="container">
     <div class="inner_banner-content-block">
       <h3 class="inner_banner-title">Отзывы наших клиентов</h3>
@@ -64,161 +63,59 @@
             </div>
             <div class="slider">
               <div class="logos brands-wrapper">
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/1.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/1.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/2.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/2.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/3.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/3.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/4.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/4.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/5.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/5.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/6.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/6.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/7.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/7.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/8.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/8.png' %} alt="brand-logo">
                 </div>
                 <!-- <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
                       <img class="icon-brand" src={% static '/image/home/9.png'%} alt="brand-logo">
                     </div> -->
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/10.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/10.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/11.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/11.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/12.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/12.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/13.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/13.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/14.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/14.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/15.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/15.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/16.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/16.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/17.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/17.png' %} alt="brand-logo">
                 </div>
-                <div
-                  class="single-brand fab"
-                  data-aos-duration="1000"
-                  data-aos="fade-left"
-                  data-aos-delay="800"
-                >
-                  <img class="icon-brand" src={% static '/image/home/18.png'%}
-                  alt="brand-logo">
+                <div class="single-brand fab" data-aos-duration="1000" data-aos="fade-left" data-aos-delay="800">
+                  <img class="icon-brand" src={% static '/image/home/18.png' %} alt="brand-logo">
                 </div>
               </div>
             </div>
@@ -233,12 +130,12 @@
 
 <div class="about_content-section bg-light-2 section-padding-120 ">
 
-{% for review in reviews %}
+  {% for review in reviews %}
   <div class="container section-padding-bottom">
     <div class="row row--custom ">
       <div class="col-xxl-6 col-lg-5 col-md-6 col-7">
         <div class="about_content-image-block ">
-         {% if review.review_video == '' %}
+          {% if review.review_video == '' %}
           <div class="about_content-image content-image--mobile-width">
             <img src={{ review.review_image.url }} alt="alternative text">
           </div>
@@ -254,7 +151,8 @@
           {% endif %}
         </div>
       </div>
-      <div class="col-xxl-6 col-lg-7 col-md-10 col-auto aos-init aos-animate" data-aos-duration="1000" data-aos="fade-left">
+      <div class="col-xxl-6 col-lg-7 col-md-10 col-auto aos-init aos-animate" data-aos-duration="1000"
+        data-aos="fade-left">
         <div class="content">
           <div class="testimonial-widget-2__user-block gap-3" bis_skin_checked="1">
             <img src="{% static '/image/icons/h03-feature-2.svg' %}" alt="image alt">
@@ -282,22 +180,22 @@
       </div>
     </div>
   </div>
-{% endfor %}
+  {% endfor %}
 
-<div class="pagination" bis_skin_checked="1">
-  <!-- Pagination -->
-  <div class="pagination-wrapper" bis_skin_checked="1">
-    <button class="btn btn--arrow">
-      <i class="fa fa-angle-left"></i>
-    </button>
-    <button class="btn btn-main active">1</button>
-    <button class="btn btn-main">2</button>
-    <button class="btn btn-main">3</button>
-    <button class="btn btn--arrow">
-      <i class="fa fa-angle-right"></i>
-    </button>
+  <div class="pagination" bis_skin_checked="1">
+    <!-- Pagination -->
+    <div class="pagination-wrapper" bis_skin_checked="1">
+      <button class="btn btn--arrow">
+        <i class="fa fa-angle-left"></i>
+      </button>
+      <button class="btn btn-main active">1</button>
+      <button class="btn btn-main">2</button>
+      <button class="btn btn-main">3</button>
+      <button class="btn btn--arrow">
+        <i class="fa fa-angle-right"></i>
+      </button>
+    </div>
   </div>
-</div>
 
 </div>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~
@@ -306,27 +204,18 @@
 <div class="cta-base">
   <div class="container">
     <div class="cta-base__wrapper border-bottom-dark">
-      <div
-        class="row align-items-center justify-content-center justify-content-md-between gutter-y-20"
-      >
+      <div class="row align-items-center justify-content-center justify-content-md-between gutter-y-20">
         <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-7 col-10">
           <div class="cta-base__text-block">
-            <h2 class="heading-md text-white">Хотите так же?</h2> 
+            <h2 class="heading-md text-white">Хотите так же?</h2>
           </div>
         </div>
         <div class="col-xl-auto col-lg-4 col-md-5 col-xs-8 col-10">
           <div class="cta-base__button">
-            <a
-              href="./contact.html"
-              class="btn-masco rounded-pill btn-fill--up"
-            >
-              <span>Заполнить заявку</span></a
-            >
+            <a href="./contact.html" class="btn-masco rounded-pill btn-fill--up">
+              <span>Заполнить заявку</span></a>
             <div class="cta-base__button-shape">
-              <img
-                src="{% static '/image/home-1/cta-shape.svg' %}"
-                alt="image alt"
-              />
+              <img src="{% static '/image/home-1/cta-shape.svg' %}" alt="image alt" />
             </div>
           </div>
         </div>
@@ -336,4 +225,4 @@
 </div>
 
 
-    {% endblock %}
+{% endblock %}
