--- a/bitrixsite/static/css/style.css
+++ b/bitrixsite/static/css/style.css
@@ -7525,6 +7525,11 @@ div#loading img {
     font-size: 30px;
   }
 }
+
+.ticker-01_content.no-anim {
+  animation: none !important;
+}
+
 .ticker-01_content {
   display: flex;
   column-gap: 24px;
