--- a/templates/cases.html
+++ b/templates/cases.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
@@ -56,24 +55,21 @@
 
     </ul>
     <div class="row row--portfolio-gutter pb-5">
-      <div
-        class="col-md-6 col-xs-10"
-        data-aos-duration="1000"
-        data-aos="fade-up"
-        data-aos-delay="300"
-      >
+      <div class="col-md-6 col-xs-10" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
         <a href="portfolio-details.html" class="portfolio-widget">
           <div class="portfolio-widget_image-block hover-fill--up">
-            <img
-              src="{% static '/image/home-1/portf1.png' %}"
-              alt="portfolio image"
-              class="portfolio-image"
-            />
+            <img src="{% static '/image/home-1/portf1.png' %}" alt="portfolio image" class="portfolio-image" />
             <div class="hover-fill--up__text">
               <ul class="portfolio-thesis-list">
-                <li><h3>Снижение отходов на 40%</h3></li>
-                <li><h3>Интеграция ИИ-сортировки</h3></li>
-                <li><h3>Экономия ресурсов</h3></li>
+                <li>
+                  <h3>Снижение отходов на 40%</h3>
+                </li>
+                <li>
+                  <h3>Интеграция ИИ-сортировки</h3>
+                </li>
+                <li>
+                  <h3>Экономия ресурсов</h3>
+                </li>
               </ul>
             </div>
           </div>
@@ -88,24 +84,21 @@
       </div>
 
 
-      <div
-        class="col-md-6 col-xs-10"
-        data-aos-duration="1000"
-        data-aos="fade-up"
-        data-aos-delay="300"
-      >
+      <div class="col-md-6 col-xs-10" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
         <a href="portfolio-details.html" class="portfolio-widget">
           <div class="portfolio-widget_image-block hover-fill--up">
-            <img
-              src="{% static '/image/home-1/portf2.png' %}"
-              alt="portfolio image"
-              class="portfolio-image"
-            />
+            <img src="{% static '/image/home-1/portf2.png' %}" alt="portfolio image" class="portfolio-image" />
             <div class="hover-fill--up__text">
               <ul class="portfolio-thesis-list">
-                <li><h3>Снижение отходов на 40%</h3></li>
-                <li><h3>Интеграция ИИ-сортировки</h3></li>
-                <li><h3>Экономия ресурсов</h3></li>
+                <li>
+                  <h3>Снижение отходов на 40%</h3>
+                </li>
+                <li>
+                  <h3>Интеграция ИИ-сортировки</h3>
+                </li>
+                <li>
+                  <h3>Экономия ресурсов</h3>
+                </li>
               </ul>
             </div>
           </div>
@@ -120,24 +113,21 @@
       </div>
     </div>
     <div class="row row--portfolio-gutter pt-5">
-      <div
-        class="col-md-6 col-xs-10"
-        data-aos-duration="1000"
-        data-aos="fade-up"
-        data-aos-delay="300"
-      >
+      <div class="col-md-6 col-xs-10" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
         <a href="portfolio-details.html" class="portfolio-widget">
           <div class="portfolio-widget_image-block hover-fill--up">
-            <img
-              src="{% static '/image/home-1/portf1.png' %}"
-              alt="portfolio image"
-              class="portfolio-image"
-            />
+            <img src="{% static '/image/home-1/portf1.png' %}" alt="portfolio image" class="portfolio-image" />
             <div class="hover-fill--up__text">
               <ul class="portfolio-thesis-list">
-                <li><h3>Снижение отходов на 40%</h3></li>
-                <li><h3>Интеграция ИИ-сортировки</h3></li>
-                <li><h3>Экономия ресурсов</h3></li>
+                <li>
+                  <h3>Снижение отходов на 40%</h3>
+                </li>
+                <li>
+                  <h3>Интеграция ИИ-сортировки</h3>
+                </li>
+                <li>
+                  <h3>Экономия ресурсов</h3>
+                </li>
               </ul>
             </div>
           </div>
@@ -152,24 +142,21 @@
       </div>
 
 
-      <div
-        class="col-md-6 col-xs-10"
-        data-aos-duration="1000"
-        data-aos="fade-up"
-        data-aos-delay="300"
-      >
+      <div class="col-md-6 col-xs-10" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
         <a href="portfolio-details.html" class="portfolio-widget">
           <div class="portfolio-widget_image-block hover-fill--up">
-            <img
-              src="{% static '/image/home-1/portf2.png' %}"
-              alt="portfolio image"
-              class="portfolio-image"
-            />
+            <img src="{% static '/image/home-1/portf2.png' %}" alt="portfolio image" class="portfolio-image" />
             <div class="hover-fill--up__text">
               <ul class="portfolio-thesis-list">
-                <li><h3>Снижение отходов на 40%</h3></li>
-                <li><h3>Интеграция ИИ-сортировки</h3></li>
-                <li><h3>Экономия ресурсов</h3></li>
+                <li>
+                  <h3>Снижение отходов на 40%</h3>
+                </li>
+                <li>
+                  <h3>Интеграция ИИ-сортировки</h3>
+                </li>
+                <li>
+                  <h3>Экономия ресурсов</h3>
+                </li>
               </ul>
             </div>
           </div>
@@ -228,27 +215,18 @@
 <div class="cta-base">
   <div class="container">
     <div class="cta-base__wrapper border-bottom-dark">
-      <div
-        class="row align-items-center justify-content-center justify-content-md-between gutter-y-20"
-      >
+      <div class="row align-items-center justify-content-center justify-content-md-between gutter-y-20">
         <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-7 col-10">
           <div class="cta-base__text-block">
-            <h2 class="heading-md text-white">Хотите так же?</h2> 
+            <h2 class="heading-md text-white">Хотите так же?</h2>
           </div>
         </div>
         <div class="col-xl-auto col-lg-4 col-md-5 col-xs-8 col-10">
           <div class="cta-base__button">
-            <a
-              href="./contact.html"
-              class="btn-masco rounded-pill btn-fill--up"
-            >
-              <span>Заполнить заявку</span></a
-            >
+            <a href="./contact.html" class="btn-masco rounded-pill btn-fill--up">
+              <span>Заполнить заявку</span></a>
             <div class="cta-base__button-shape">
-              <img
-                src="{% static '/image/home-1/cta-shape.svg' %}"
-                alt="image alt"
-              />
+              <img src="{% static '/image/home-1/cta-shape.svg' %}" alt="image alt" />
             </div>
           </div>
         </div>
