--- a/templates/blog.html
+++ b/templates/blog.html
@@ -7,10 +7,10 @@
   <img class="inner_banner-background-image" src="{% static '/image/common/inner-bg.png' %}" alt="image alt">
   <div class="container">
     <div class="inner_banner-content-block">
-      <h3 class="inner_banner-title"> Статьи &amp; Новости</h3>
+      <h3 class="inner_banner-title"> Статьи, новости и полезная информация о Битрикс24</h3>
       <ul class="banner__page-navigator">
         <li>
-          <a href="/">Home</a>
+          <a href="/">Главная</a>
         </li>
         <li class="active">
           <a href="/blog">
@@ -70,8 +70,22 @@
 
           </div>
         </div>
-        <div class="pagination">
+        <div class="pagination" bis_skin_checked="1">
           <!-- Pagination -->
+          <div class="pagination-wrapper" bis_skin_checked="1">
+            <button class="btn btn--arrow">
+              <i class="fa fa-angle-left"></i>
+            </button>
+            <button class="btn btn-main active">1</button>
+            <button class="btn btn-main">2</button>
+            <button class="btn btn-main">3</button>
+            <button class="btn btn--arrow">
+              <i class="fa fa-angle-right"></i>
+            </button>
+          </div>
+        </div>
+        <!-- <div class="pagination">
+          Pagination 
           <div class="pagination-wrapper">
             {% if page_obj.has_previous %}
            
@@ -88,7 +102,7 @@
             
             {% endif %}
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="col-xl-4">
         <aside class="sidebar-wrapper">
@@ -100,13 +114,34 @@
               </div>
               <ul class="sidebar-category-list">
 
-                {% for cat in cats %}
+                <li class="sidebar-category-list-item">
+                  <a href="#" class="sidebar-category">
+                    Новости
+                  </a>
+                </li>
+                <li class="sidebar-category-list-item">
+                  <a href="#" class="sidebar-category">
+                    Вебинары
+                  </a>
+                </li>
+                <li class="sidebar-category-list-item">
+                  <a href="#" class="sidebar-category">
+                    Мероприятия
+                  </a>
+                </li>
+                <li class="sidebar-category-list-item">
+                  <a href="#" class="sidebar-category">
+                    Полезная информация
+                  </a>
+                </li>
+
+                <!-- {% for cat in cats %}
                 <li class="sidebar-category-list-item">
                   <a href="#" class="sidebar-category">
                     {{ cat }}
                   </a>
                 </li>
-                {% endfor %}
+                {% endfor %} -->
               </ul>
             </div>
           </div>
@@ -118,17 +153,35 @@
             </div>
             <div class="sidebar-newsletter">
               <p>
-               Подпишитесь на рассылку или на социальные сети
+               Подпишитесь на рассылку и будьте в курсе важных новостей
+               </p>
+               <form action="#" class="input-wrapper">
+                <input class="form-control" type="text" placeholder="Введите свою почту">
+              </form>
+              <div class="sidebar-button">
+                <a href="#" class="btn-masco btn-primary rounded-pill w-100">Подписаться на на рассылку</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="sidebar-single">
+            <div class="sidebar-title-block">
+              <h3 class="sidebar-title">Социальные сети</h3>
+            </div>
+            <div class="sidebar-newsletter">
+              <p>
+               Присоединяйтесь к Правильным Интеграторам в социальных сетях, там много интересного!
+               </p>
 
                <ul class="list-social">
                 <li>
                   <a href="#">
-                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-youtube"></i>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-tiktok"></i>
                   </a>
                 </li>
                 <li>
@@ -138,21 +191,39 @@
                 </li>
                 <li>
                   <a href="#">
-                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-telegram"></i>
                   </a>
                 </li>
               </ul>
-
-              </p>
-              <form action="#" class="input-wrapper">
-                <input class="form-control" type="text" placeholder="Введите свою почту">
-              </form>
-              <div class="sidebar-button">
-                <a href="#" class="btn-masco btn-primary rounded-pill w-100">Подписаться</a>
-              </div>
             </div>
           </div>
         </aside>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--~~~~~~~~~~~~~~~~~~~~~~~~
+     CTA Base 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<div class="cta-base">
+  <div class="container">
+    <div class="cta-base__wrapper border-bottom-dark">
+      <div class="row align-items-center justify-content-center justify-content-md-between gutter-y-20">
+        <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-7 col-10">
+          <div class="cta-base__text-block">
+            <h2 class="heading-md text-white">Информация - это хорошо, но может стоит применить ее на практике?</h2>
+          </div>
+        </div>
+        <div class="col-xl-auto col-lg-4 col-md-5 col-xs-8 col-10">
+          <div class="cta-base__button">
+            <a href="./contact.html" class="btn-masco rounded-pill btn-fill--up">
+              <span>Давайте приступим!</span></a>
+            <div class="cta-base__button-shape">
+              <img src="{% static '/image/home-1/cta-shape.svg' %}" alt="image alt" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
