fix: correct mobile

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -7775,8 +7775,6 @@ div#loading img {
 }
 
 .pricing-control-3 {
-  max-width: 265px;
-  min-width: 265px;
   display: inline-flex;
   border-radius: 500px;
   height: 35px;
@@ -12841,10 +12839,18 @@ div#loading img {
     margin-bottom: 60px;
   }
 }
+@media(max-width: 768px) {
+  .home-9_pricing-control-block {
+    margin-top: 50px;
+    margin-bottom: 60px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .home-9_pricing-control-shape {
   display: none;
   position: absolute;
-  right: -30%;
+  right: -40%;
   top: -100%;
 }
 @media (min-width: 992px) {
