--- a/templates/licence.html
+++ b/templates/licence.html
@@ -664,7 +664,7 @@
     <p class="text-center">
       Цены указаны за всю компанию, а не за отдельных пользователей
     </p>
-    <div class="pt-5" style="display: flex; justify-content: space-between; align-items: center;">
+    <div class="pt-5" style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
       <div class="home-9_pricing-control-block" bis_skin_checked="1">
         <div class="home-9_pricing-control-shape" bis_skin_checked="1">
           <img src="{% static '/image/home-9/pricing-card-shape.svg' %}" alt="discound icon">
@@ -676,7 +676,7 @@
           <span data-pricing-trigger="pricing-1" data-target="yearly" class="">Per Year</span>
         </div>
       </div>
-      <div class="home-9_pricing-control-block">
+      <div class="home-8_hero-button-group" >
         <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up">
           <span>Облачная версия</span>
         </a>
