--- a/templates/licence.html
+++ b/templates/licence.html
@@ -677,15 +677,15 @@
         </div>
       </div>
       <div class="home-8_hero-button-group" >
-        <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up">
+        <a class="btn-masco btn-masco--header rounded-pill btn-fill--up cloud" style="padding: 13px 33px; cursor: pointer;">
           <span>Облачная версия</span>
         </a>
-        <a href="#" class="btn-masco btn-outline-l08 btn-fill--up rounded-pill" style="padding: 13px 33px;">
+        <a class="btn-masco btn-outline-l08 btn-fill--up rounded-pill blocks" style="padding: 13px 33px; cursor: pointer;">
           <span>Коробочная версия</span>
         </a>
       </div>
     </div>
-    <div class="plans mt-5" data-plan-id="pricing-1" data-plan-active="monthly">
+    <div class="plans-4 mt-5" data-plan-id="pricing-1" data-plan-active="monthly">
       <div class="plan plan--lemon">
         <div class="plan__header p-3 text-center">
           <div class="service-card__title mt-2">Бесплатный</div>
@@ -1015,129 +1015,10 @@
           </div>
         </div>
       </div>
-      <div class="plan plan--blue">
-        <div class="plan__header p-3 text-center">
-          <div class="service-card__title mt-2">Энтерпрайз</div>
-          <p>Для максимальной автоматизации всех процессов в компании</p>
-        </div>
-        <div class="plan__content p-4 d-flex flex-column justify-content-between">
-          <div>
-            <div class="text-center p-2">
-              <div>
-                <b>100 <br />
-                  пользователей</b>
-              </div>
-
-              <div class="service-card__title mt-2 dynamic-value" data-yearly="936 BYN/мес" data-monthly="1169 BYN/мес">
-                1169 BYN/мес</div>
-              <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up mt-4">
-                <span>Создать</span>
-              </a>
-              <div class="mt-4">
-                <b>3 ТБ</b>
-              </div>
-            </div>
-            <div class="plan__line mt-4"></div>
-            <div class="">
-              <div class="plan__subtitle">
-                <b>Совместная работа</b>
-                <ul class="ms-3">
-                  <li class="pt-2">Календарь</li>
-                  <li class="pt-2">Соцсеть компании</li>
-                  <li class="pt-2">Лента</li>
-                  <li class="pt-2">Доски</li>
-                  <li class="pt-2">База знаний</li>
-                </ul>
-              </div>
-              <div class="plan__subtitle">
-                <b>Мессенджер</b>
-                <ul class="ms-3">
-                  <li class="pt-2">Чат</li>
-                  <li class="pt-2">Каналы</li>
-                  <li class="pt-2">Битрикс24 Синк</li>
-                </ul>
-              </div>
-              <div class="plan__subtitle">
-                <b>Коллабы</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Задачи и проекты</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>CRM</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>CoPilot</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Онлайн-подпись</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Диск</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Контакт-центр</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Сайты</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Интернет-магазин</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Маркетинг</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Документы Онлайн</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Онлайн-запись</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Сквозная аналитика</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Автоматизация</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>HR: Компания</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Филиалы</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Энтерпрайз-кластер</b>
-              </div>
-              <div class="plan__subtitle">
-                <b>Энтерпрайз-пакет</b>
-              </div>
-            </div>
-          </div>
-          <div style="height: 96px;">
-            <div class="plan__subtitle">
-              <b>Поддержка</b>
-            </div>
-            <div class="plan__subtitle">
-              <b>Администрирование</b>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-    <div class="text-center mt-5">
-      <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up">
-        <span>Узнать больше</span>
-      </a>
-    </div>
-  </div>
-</div>
 
-<div class="section-padding-120">
-  <div class="container">
-    <h2 class="content-title heading-md text-black text-center">
-      Коробочные тарифы Битрикс24
-    </h2>
-    <div class="plans-3 mt-5" data-plan-id="pricing-1" data-plan-active="monthly">
+
+    <div class="plans-3 mt-5" data-plan-id="pricing-1" data-plan-active="monthly" style="display: none;">
       <div class="plan plan--lemon">
         <div class="plan__header p-3 text-center">
           <div class="service-card__title mt-2">Интернет-магазин + CRM</div>
@@ -1252,9 +1133,13 @@
         </div>
       </div>
     </div>
+    <div class="text-center mt-5">
+      <a href="#" class="btn-masco btn-masco--header rounded-pill btn-fill--up">
+        <span>Узнать больше</span>
+      </a>
+    </div>
   </div>
 </div>
-
 
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~
