fix: correct pricing-controll

--- a/templates/licence.html
+++ b/templates/licence.html
@@ -665,7 +665,7 @@
       Цены указаны за всю компанию, а не за отдельных пользователей
     </p>
     <div class="pt-5" style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
-      <div class="home-9_pricing-control-block" bis_skin_checked="1">
+      <div class="home-9_pricing-control-block price" bis_skin_checked="1">
         <div class="home-9_pricing-control-shape" bis_skin_checked="1">
           <img src="{% static '/image/home-9/pricing-card-shape.svg' %}" alt="discound icon">
         </div>
