feat: add cloud-page

--- a/templates/licence.html
+++ b/templates/licence.html
@@ -670,10 +670,10 @@
           <img src="{% static '/image/home-9/pricing-card-shape.svg' %}" alt="discound icon">
         </div>
         <div class="pricing-control-3" bis_skin_checked="1">
-          <span data-pricing-trigger="pricing-1" data-target="monthly" class="active">Per Month</span>
+          <span data-pricing-trigger="pricing-1" data-target="monthly" class="active">На месяц</span>
           <span data-pricing-trigger="pricing-1" data-target="yearly"
             class="pricing-control-3__indicator indicator-white toggle"></span>
-          <span data-pricing-trigger="pricing-1" data-target="yearly" class="">Per Year</span>
+          <span data-pricing-trigger="pricing-1" data-target="yearly" class="">На год</span>
         </div>
       </div>
       <div class="home-8_hero-button-group" >
